--- a/output/team.html
+++ b/output/team.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>DREAM TEAM!</title>
+    <title>My Team</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 jumbotron mb-3 team-heading">
-                <h1 class="text-center">The Dream Team </h1>
+                <h1 class="text-center">My Team</h1>
             </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
         <ul class="list-group">
             <li class="list-group-item">ID: 003</li>
             <li class="list-group-item">Email: <a href="mailto:borisnatasha@email.com">borisnatasha@email.com</a></li>
-            <li class="list-group-item">Phone Number: 555-555-5555</li>
+            <li class="list-group-item">Office number: 555-555-5555</li>
         </ul>
     </div>
 </div>
